# envy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Justfile  README.md  SECURITY.md  cliff.toml  grammar.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tarpaulin-report.html
.github/: FUNDING.yml
.github/workflows/: test.yml
clients/rust/: Cargo.toml
clients/rust/src/: gen.rs  main.rs
clients/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
clients/typescript/src/: index.ts
cloud/: .gitignore  Justfile
cloud/api/: Justfile  api.go  go.mod  go.sum  main.go
cloud/api/bruno/: bruno.json
cloud/api/database/: connection.go
cloud/db/: Justfile  README.md  atlas.hcl
cloud/db/migrations/: 20240708231157.sql  20240708231540.sql  20240708233007.sql  atlas.sum
cloud/db/schema/: environment_variables.atlas.hcl  environments.atlas.hcl  organisation_members.atlas.hcl  organisations.atlas.hcl  project_members.atlas.hcl  projects.atlas.hcl  schema.atlas.hcl  users.atlas.hcl  variable_values.atlas.hcl  variables.atlas.hcl
cloud/leptos/: Cargo.toml  README.md
cloud/nv-ui/: package-lock.json  package.json
cloud/ui/: README.md  package-lock.json  package.json  pnpm-lock.yaml
cloud/vault/: Cargo.toml
docs/: compiler.md
examples/: example.nv
examples/lexer-api/: Cargo.toml  input.nv  module.nv  provider.nv  pub-vars.nv  simple-vars.nv
examples/nv-files/: attributes.nv  example.nv  module.nv  provider-aws_sm.nv  provider-env.nv  provider-multi.nv  provider.nv  simple-env.nv  simple-vars.nv  var-attributes.nv  var-with-provider-and-module.nv  var-with-provider.nv  whitespace.nv
examples/parser-api/: Cargo.toml
examples/resolver-api/: Cargo.toml
extensions/neovim-treesitter-nv/: README.md
extensions/tree-sitter/: Cargo.toml  README.md  binding.gyp  package.json  pnpm-lock.yaml
extensions/tree-sitter-nv/: Cargo.toml  README.md  binding.gyp  example.nv  grammar.js  package-lock.json  package.json
extensions/vscode/: .gitignore  language-configuration.json  package-lock.json  package.json
extensions/vscode-nv/: CHANGELOG.md  README.md  package.json  tsconfig.json  vsc-extension-quickstart.md  vscode-nv-0.0.1.vsix
lang/: .gitignore  Cargo.toml  Justfile
lang/examples/nv-files/: provider-multi.nv  pub-vars.nv  simple-vars.nv  var-with-provider-and-module.nv  var.nv  whitespace-newlines.nv
lang/extensions/tree-sitter-nv/: README.md  grammar.js  package.json
lang/extensions/tree-sitter-nv/bindings/node/: index.js
lang/extensions/tree-sitter-nv/queries/: highlights.scm
lang/extensions/vscode-nv/: README.md  package.json
lang/extensions/vscode-nv/language-server-client/: extension.ts
lang/extensions/vscode-nv/syntaxes/: nv.tmLanguage.json
lang/testing/nvx-parsing/: Cargo.toml
lang/testing/nvx-parsing/src/: main.rs
lang/testing/unit/: Cargo.toml
testing/nvx-parsing/: .gitignore  Cargo.toml
testing/unit/: Cargo.toml
(+60 files in other folders)
