[workspace]
resolver = "2"

members = [
  "packages/parser",
  "packages/parser/examples",

  "packages/lexer",
  "packages/lexer/examples",

  "packages/resolvers/var",
  "packages/resolvers/provider",
  "packages/resolvers/__examples/var",

  "packages/position_indexer",

  "packages/language-server",

  "packages/code-generation/javascript",
  "packages/code-generation/__examples/javascript",

  "packages/provider/core",

  "packages/provider/providers/env",
  "packages/provider/providers/__examples/env",

  "packages/provider/providers/aws-secrets-manager",
  "packages/provider/providers/__examples/aws-secrets-manager",

  "testing/nvx-parsing",
  "testing/unit",
]
