[workspace]
resolver = "2"

members = [
  "packages/parser",
  "packages/parser/examples",

  "packages/lexer",
  "packages/lexer/examples",

  "packages/resolvers/var",
  "packages/resolvers/provider",
  "packages/resolvers/__examples/var",

  "packages/position_indexer",

  "packages/language-server",

  "packages/code-generation/javascript",
  "packages/code-generation/__examples/javascript",

  "packages/providers/core",

  "packages/providers/providers/env",
  "packages/providers/providers/__examples/env",

  "packages/providers/providers/aws-secrets-manager",
  "packages/providers/providers/__examples/aws-secrets-manager",

  "testing/nvx-parsing",
  "testing/unit",
]
