[workspace]
resolver = "2"

members = [
  "packages/parser",
  "packages/parser/examples",

  "packages/lexer",
  "packages/lexer/examples",

  "packages/resolvers/var",
  "packages/resolvers/provider",
  "packages/resolvers/__examples/var",

  "packages/position_indexer",

  "packages/language-server",

  "packages/code-generation/javascript",
  "packages/code-generation/__examples/javascript",

  "packages/providers/core",

  "packages/providers/providers/env/lib",
  "packages/providers/providers/env/server",
  "packages/providers/providers/env/__examples",

  "packages/providers/providers/aws-secrets-manager/lib",
  "packages/providers/providers/aws-secrets-manager/server",
  "packages/providers/providers/aws-secrets-manager/__examples",

  "testing/nvx-parsing",
  "testing/unit",
]
