[workspace]
resolver = "2"

members = [
  "packages/parser/lib",
  "packages/parser/examples",
  "packages/lexer/lib",
  "packages/lexer/examples",

  "packages/resolvers/var/lib",
  "packages/resolvers/var/examples",
  "packages/resolvers/provider/lib",

  "packages/code-generation/javascript/lib",
  "packages/code-generation/javascript/examples",

  "packages/providers/env/lib",
  "packages/providers/env/examples",
  "packages/providers/aws-secrets-manager/lib",
  "packages/providers/aws-secrets-manager/examples",

  "packages/language-server",
  "packages/position_indexer",

  "testing/nvx-parsing",
  "testing/unit", "packages/cli",
]
